<resources>
    <string name="app_name">News</string>
    <string name="filter">Filter</string>
    <string name="date">Date</string>
    <string name="yyyy_mm_dd">yyyy/mm/dd</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="logo">Logo</string>
    <string name="search_in">Search in</string>
    <string name="apply_filter">Apply filter</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="update_date">Update date</string>
    <string name="relevance">Relevance</string>
</resources>