<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.TopBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:letterSpacing="-0.05"
                android:text="@string/logo"
                android:textColor="@color/purple_500"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/iv_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/background_transparent_button"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:paddingVertical="5dp"
        android:text="@string/filter"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:paddingVertical="5dp"
        android:text="@string/date"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_filter_title" />

    <TextView
        android:id="@+id/tv_from_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_transparent_button"
        android:text="@string/from"
        android:textColor="?colorPrimary"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_from_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_transparent_button"
        android:drawablePadding="4dp"
        android:hint="@string/yyyy_mm_dd"
        android:paddingVertical="10dp"
        android:textColorHint="#939DAE"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_calendar_16"
        app:drawableTint="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_from_title" />

    <View
        android:id="@+id/v_separator_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:background="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_from_picker" />

    <TextView
        android:id="@+id/tv_to_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_transparent_button"
        android:text="@string/to"
        android:textColor="?colorPrimary"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_separator_1"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/tv_to_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_transparent_button"
        android:drawablePadding="4dp"
        android:hint="@string/yyyy_mm_dd"
        android:paddingVertical="10dp"
        android:textColorHint="#939DAE"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_calendar_16"
        app:drawableTint="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_to_title" />

    <View
        android:id="@+id/v_separator_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:background="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_to_picker" />

    <TextView
        android:id="@+id/tv_search_in_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#939DAE"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_search_in"
        app:layout_constraintEnd_toEndOf="@+id/tv_search_in"
        app:layout_constraintTop_toTopOf="@+id/tv_search_in"
        tools:text="@string/search_in" />

    <TextView
        android:id="@+id/tv_search_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_transparent_button"
        android:paddingVertical="10dp"
        android:text="@string/search_in"
        android:textColorHint="#939DAE"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_separator_2" />

    <View
        android:id="@+id/v_separator_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:background="#F2F2F2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_in" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mb_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:elevation="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textSize="15sp"
        android:letterSpacing="0"
        android:padding="0dp"
        android:text="@string/apply_filter"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/ShapeAppearance.Button" />
</androidx.constraintlayout.widget.ConstraintLayout>